# FFGLTouchEngine

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  FFGLTouchEngine.sln  FFGLTouchEngine.vcxproj  FFGLTouchEngine.vcxproj.filters  LICENSE.txt  README.md  glew.props  vcpkg.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: msbuild.yml
Example/: InputOutput5Param.tox  InputOutput5ParamDB.tox  InputOutput5ParamDB2.tox  InputOutput5ParamDifferentOutput.tox  InputOutput5ParamVector.tox  NoiseOutOnly.tox  NoiseOutOnly1Param.tox  NoiseOutOnly32Bit.tox  NoiseOutOnly5Param.tox  NoiseOutOnly5ParamDropdown.tox  SyphonTestInput.tox
FFGLTouchEngine/: FFGLTouchEngine.vcxproj  FFGLTouchEngine.vcxproj.filters
FFGLTouchEngine.xcodeproj/: project.pbxproj
FFGLTouchEngine/src/: TouchEngine.cpp  TouchEngine.h
FFGLTouchEngineFX/: FFGLTouchEngineFX.vcxproj  FFGLTouchEngineFX.vcxproj.filters
FFGLTouchEngineFX/src/: TouchEngineFX.cpp  TouchEngineFX.h
cmake/: BundleInfo.plist.in  sign_bundle.sh
include/SpoutDX/: SpoutDX.h
include/SpoutGL/: SpoutGL.h
lib/Spout/: Spout_static.lib
lib/TouchEngine/TouchEngine.framework/: TouchEngine
lib/TouchEngine/TouchEngine.framework/Versions/A/: TouchEngine
lib/TouchEngine/TouchEngine.framework/Versions/A/Frameworks/: libTPC.dylib  libTouchEngine.dylib
lib/TouchEngine/TouchEngine.framework/Versions/A/Frameworks/IPM.framework/: IPM
lib/TouchEngine/TouchEngine.framework/Versions/A/Frameworks/IPM.framework/Versions/A/: IPM  ca.derivative.IPMAgent
lib/TouchEngine/TouchEngine.framework/Versions/A/Frameworks/IPM.framework/Versions/A/Resources/: Info.plist
lib/TouchEngine/TouchEngine.framework/Versions/A/Frameworks/IPM.framework/Versions/A/_CodeSignature/: CodeResources
lib/TouchEngine/TouchEngine.framework/Versions/A/Headers/: TEInstance.h  TEMetal.h
lib/TouchEngine/TouchEngine.framework/Versions/A/Modules/: module.modulemap
lib/TouchEngine/TouchEngine.framework/Versions/A/Resources/: Info.plist
src/: TouchEngine.cpp  TouchEngine.h
src/FFGL/ffgl/: FFGL.h  FFGLPluginInfo.h  FFGLPluginManager.cpp
src/lib/FFGL/ffgl/: FFGLPluginInfoData.cpp
src/plugins/: CMakeLists.txt
src/plugins/FFGLTouchEngine/: CMakeLists.txt  FFGLTouchEngine.vcxproj  FFGLTouchEngine.vcxproj.filters  TouchEngine.cpp  TouchEngine.h
src/plugins/FFGLTouchEngineFX/: CMakeLists.txt  FFGLTouchEngineFX.vcxproj  FFGLTouchEngineFX.vcxproj.filters  Thumbnail.h  TouchEngineFX.cpp  TouchEngineFX.h
src/plugins/shared/: TouchEnginePluginBase.cpp  TouchEnginePluginBase.h
